; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_shape.c_combining_lexical_Lao.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_shape.c_combining_lexical_Lao.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @combining_lexical_Lao to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @combining_lexical_Lao(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %10 [
    i32 3761, label %5
    i32 3764, label %5
    i32 3765, label %5
    i32 3766, label %5
    i32 3767, label %5
    i32 3771, label %5
    i32 3789, label %5
    i32 3784, label %6
    i32 3785, label %6
    i32 3786, label %6
    i32 3787, label %6
    i32 3788, label %6
    i32 3772, label %7
    i32 3768, label %8
    i32 3769, label %8
    i32 3763, label %9
  ]

5:                                                ; preds = %1, %1, %1, %1, %1, %1, %1
  store i32 1, i32* %2, align 4
  br label %11

6:                                                ; preds = %1, %1, %1, %1, %1
  store i32 2, i32* %2, align 4
  br label %11

7:                                                ; preds = %1
  store i32 3, i32* %2, align 4
  br label %11

8:                                                ; preds = %1, %1
  store i32 4, i32* %2, align 4
  br label %11

9:                                                ; preds = %1
  store i32 5, i32* %2, align 4
  br label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %11

11:                                               ; preds = %10, %9, %8, %7, %6, %5
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
